@@ -1,3 +1,5 @@
+2025-05-16 08:14
+- Added Squadron boost to income and experience results. Slight differences between simulator and in game log are due to rounding errors
 
 2025-05-15 20:48
 - Added resources gathering calculator
